--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vue-interface/eslint-config",
-  "version": "1.0.0-beta.0",
+  "version": "1.0.0",
   "description": "The ESLint config for Vue Interface",
   "main": "index.js",
   "scripts": {
