--- a/package.json
+++ b/package.json
@@ -21,12 +21,10 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "@vue/eslint-config-typescript": "^11.0.2",
     "eslint": "^8.33.0",
-    "eslint-plugin-vue": "^9.9.0"
-  },
-  "dependencies": {
+    "eslint-plugin-vue": "^9.9.0",
     "typescript": "^4.9.5"
   }
 }
