--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,6 +10,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Modules 🔌 
       run: npm install
+    # - name: Transpile Typescript 🪛 
+    #   run: npm run build
     # - name: Run Jest 🃏
     #   run: npm test
     # - name: Upload coverage reports to Codecov 📝
