--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@vue-interface/eslint-config",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.2",
   "description": "The ESLint config for Vue Interface",
   "main": "index.js",
+  "files": [
+    "index.js",
+    ".eslintrc.js"
+  ],
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint --fix"
